# congested-clique-routing

./: .gitignore  README.md  algorithm.Rmd  algorithm.md  build.sh  clique-router.cpp  color.cpp  index.html  main.cpp  main.js  main.wasm  node.cpp  node.h  serve.sh  util.h
cpp/: .gitignore  CMakeLists.txt  Makefile  clique-router.cpp  clique-router.h  color.cpp  color.h  emscripten-bindings.cpp  helper-data-structs.h  main.cpp  node.cpp  node.h  test.cpp  test.h  time-point.h
cpp/4-cycle-detection/: Makefile  main.cpp  node.cpp  node.h
web/: index.html  package-lock.json  package.json  webpack.config.js
web/src/: App.js  cppClient.js  index.js  texts.js
web/src/components/: DataColumn.js  MarkdownRender.js  Matrix.js  Textbox.js  Toolbar.js  Visualization.js
web/src/util/: matrix.js
